# PathfinderSpellCards

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: check_ingest.py
src/: config.py  db.py  main.py
src/ingest/: download.py  parser_fr.py  populate.py
src/routes/: admin.py  browse.py  card.py  cart.py  custom.py  overrides.py
src/static/: app.css
src/templates/: 404.html.j2  base.html.j2
src/templates/admin/: admin.html.j2
src/templates/browse/: _items.html.j2  detail.html.j2  list.html.j2
src/templates/card/: card.html.j2  sheet.html.j2
src/templates/cart/: cart.html.j2
src/templates/custom/: spell_form.html.j2
tests/: conftest.py  test_browse.py  test_card.py  test_cart.py  test_overrides.py  test_parser_fr.py  test_themes.py
