[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathfinder-spell-cards"
version = "0.1.0"
description = "Générateur de cartes de sorts Pathfinder 1ère édition"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi[standard]>=0.115",
    "weasyprint>=62",
    "py7zr>=0.21",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "structlog>=24",
    "apscheduler>=3.10",
    "lxml>=5",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "mypy>=1.12",
    "black>=24",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
